correction contraste

--- a/new-project/style.css
+++ b/new-project/style.css
@@ -763,7 +763,10 @@ h4 {
 .white {
     color: #FFFFFF!important;
 }
-
+.text-black-contact{
+    color:#000000;
+    font-weight: bolder;
+}
 .portfolio-thumb {
     margin-bottom: 24px;
 }
